adding find by pub id
