# ses3/application/shopping/book_model.go
@@ -1,0 +1,15 @@
+package shopping
+
+type (
+	Book struct {
+		ID        int `gorm:"primaryKey"`
+		Title     string
+		Author    string
+		PubId     int       `gorm:"column:pub_id"`
+		Publisher Publisher `gorm:"foreignKey:pub_id"`
+	}
+)
+
+func (Book) TableName() string {
+	return "book"
+}
