# ses3/application/shopping/publisher_model.go
@@ -1,0 +1,13 @@
+package shopping
+
+type (
+	Publisher struct {
+		ID        uint `gorm:"primaryKey"`
+		Name      string
+		CountryId uint `gorm:"column:country_id"`
+	}
+)
+
+func (Publisher) TableName() string {
+	return "publisher"
+}
