# ses3/docs/swagger.json
@@ -51,6 +51,56 @@
                     }
                 }
             }
+        },
+        "/shopping/book/{pubId}": {
+            "get": {
+                "description": "Put all mandatory parameter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "shopping-controller"
+                ],
+                "summary": "Shopping",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "guest",
+                        "description": "guest",
+                        "name": "X-Username",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "EN",
+                        "description": "EN",
+                        "name": "Accept-Language",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "1",
+                        "description": "publisherId",
+                        "name": "pubId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/shopping.BookDto"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -71,6 +121,38 @@
         },
         "healthcheck.CheckResponseDto": {
             "type": "object"
+        },
+        "shopping.BookDto": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "publisher": {
+                    "type": "object",
+                    "$ref": "#/definitions/shopping.PublisherDto"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "shopping.PublisherDto": {
+            "type": "object",
+            "properties": {
+                "countryId": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
