# ses3/shared/dto/shopping/book_dto.go
@@ -1,0 +1,11 @@
+package shopping
+
+type (
+	BookDto struct {
+		ID     int    `json:"id"`
+		Title  string `json:"title"`
+		Author string `json:"author"`
+		PubId  int    `json:"-,omitempty"`
+		Publisher PublisherDto `json:"publisher"`
+	}
+)
