# ses3/shared/dto/shopping/publisher_dto.go
@@ -1,0 +1,9 @@
+package shopping
+
+type (
+	PublisherDto struct {
+		ID        int `json:"id"`
+		Name      string `json:"name"`
+		CountryId int `json:"countryId"`
+	}
+)
